--- a/version_1/templates/version_1/visit_form.html
+++ b/version_1/templates/version_1/visit_form.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <h2>Record Visit</h2>
+{% if success %}<p style="color: #16a34a; font-weight: 600; margin-bottom: 16px;">Visit recorded successfully!</p>{% endif %}
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
